# advent-of-code

./: .gitignore  Cargo.toml  perf.data  perf.data.old  profile.linux-perf.txt
2018/01/: Cargo.toml
2018/01/src/: 01.rs
2018/02/: Cargo.toml
2018/02/src/: 02.rs
2018/03/: Cargo.toml
2018/03/src/: 03.rs
2018/04/: Cargo.toml
2018/04/src/: 04.rs
2018/05/: Cargo.toml
2018/05/src/: 05.rs
2018/06/: Cargo.toml
2018/06/src/: 06.rs
2019/01/: Cargo.toml
2019/01/src/: 01.rs
2019/02/: Cargo.toml
2019/02/src/: 02.rs
2019/03/: Cargo.toml
2019/03/src/: 03.rs
2019/04/: Cargo.toml
2019/04/src/: 04.rs
2019/05/: Cargo.toml
2019/05/src/: 05.rs
2019/06/: Cargo.toml
2019/06/src/: 06.rs
2019/07/: Cargo.toml
2019/07/src/: 07.rs
2019/08/: Cargo.toml
2019/08/src/: 08.rs
2019/09/: Cargo.toml
2019/09/src/: 09.rs
2019/10/: Cargo.toml
2019/10/src/: 10.rs
2019/11/: Cargo.toml
2019/11/src/: 11.rs
2019/12/: Cargo.toml
2019/13/: Cargo.toml
2019/14/: Cargo.toml
2019/15/: Cargo.toml
2019/16/: Cargo.toml
2019/17/: Cargo.toml
2019/19/: Cargo.toml
2019/20/: Cargo.toml
2019/21/: Cargo.toml
2019/22/: Cargo.toml
2019/23/: Cargo.toml
2019/24/: Cargo.toml
2019/25/: Cargo.toml
2019/compute/: Cargo.toml
2019/ocr/: Cargo.toml
2020/01/: Cargo.toml
2020/02/: Cargo.toml
2020/03/: Cargo.toml
2020/04/: Cargo.toml
2020/05/: Cargo.toml
2020/06/: Cargo.toml
2020/07/: Cargo.toml
2020/08/: Cargo.toml
2020/09/: Cargo.toml
2020/10/: Cargo.toml
2020/11/: Cargo.toml
2020/12/: Cargo.toml
2020/13/: Cargo.toml
2020/14/: Cargo.toml
2020/15/: Cargo.toml
2020/16/: Cargo.toml
2020/17/: Cargo.toml
2020/18/: Cargo.toml
2020/19/: Cargo.toml
2020/20/: Cargo.toml
2020/21/: Cargo.toml
2020/22/: Cargo.toml
2020/23/: Cargo.toml
2020/24/: Cargo.toml
2020/25/: Cargo.toml
2021/01/: Cargo.toml
2021/02/: Cargo.toml
2021/03/: Cargo.toml
2022/01/: Cargo.toml
2022/02/: Cargo.toml
2022/03/: Cargo.toml
2022/04/: Cargo.toml
2023/: .gitignore
2023/01/: Cargo.toml  out
2023/02/: Cargo.toml
2023/03/: Cargo.toml
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2023/07/: Cargo.toml
2023/08/: Cargo.toml
2023/09/: Cargo.toml
2023/10/: Cargo.toml
2023/11/: Cargo.toml
src/: compute.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
(+80 files in other folders)
