[workspace]
members = ["2020/01", "2020/02", "2020/03", "2020/04", "2020/05", "2020/06", "2020/07", "2020/08", "2020/09", "2020/10", "2020/11", "2020/12", "2020/13", "2020/14", "2020/15", "2020/16", "2020/17", "2020/18", "2020/19", "2020/20", "2020/21", "2020/22", "2020/23", "2020/24", "2020/25", "2021/01", "2021/02", "2021/03", "2023/01", "2023/02", "2023/03", "2023/04", "2023/05", "2023/06", "2022/01", "2022/02", "2023/07", "2022/03", "2022/03", "2022/03", "2022/03"]
resolver = "2"

[workspace.lints.clippy]
return_self_not_must_use = "allow"
must_use_candidate = "allow"
cast_sign_loss = "allow"
enum_glob_use = "allow"
missing_panics_doc = "allow"
pedantic = "warn"
