[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Hmvp"]
edition = "2018"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
trees = "0.2.1"
permutohedron = "0.2.4"
crossbeam-channel = "0.4"
crossbeam-utils = "0.7.0"
bytecount = "0.6.0"
gcd = "1.2.0"
nom = "5.0.1"
termion = "1.5.4"
petgraph = "0.5.0"

[profile.release]
debug = true
lto = true