[workspace]
members = [
    "2018/01",
    "2018/02",
    "2018/03",
    "2018/04",
    "2018/05",
    "2018/06",
    "2019/01",
    "2019/02",
    "2019/03",
    "2019/04",
    "2019/05",
    "2019/06",
    "2019/07",
    "2019/08",
    "2019/09",
    "2019/10",
    "2019/11",
    "2019/12",
    "2019/13",
    "2019/14",
    "2019/15",
    "2019/16",
    "2019/17",
    "2019/19",
    "2019/20",
    "2019/21",
    "2019/22",
    "2019/23",
    "2019/24",
    "2019/25",
    "2020/01",
    "2020/02",
    "2020/03",
    "2020/04",
    "2020/05",
    "2020/06",
    "2020/07",
    "2020/08",
    "2020/09",
    "2020/10",
    "2020/11",
    "2020/12",
    "2020/13",
    "2020/14",
    "2020/15",
    "2020/16",
    "2020/17",
    "2020/18",
    "2020/19",
    "2020/20",
    "2020/21",
    "2020/22",
    "2020/23",
    "2020/24",
    "2020/25",
    "2021/01",
    "2021/02",
    "2021/03",
    "2022/01",
    "2022/02",
    "2022/03",
    "2022/03",
    "2022/03",
    "2022/03",
    "2022/04",
    "2023/01",
    "2023/02",
    "2023/03",
    "2023/04",
    "2023/05",
    "2023/06",
    "2023/07",
    "2023/08",
    "2023/09",
]
resolver = "2"

[workspace.lints.clippy]
cast_sign_loss = "allow"
enum_glob_use = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
pedantic = "warn"
return_self_not_must_use = "allow"
